--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "prettier": "prettier --write src/**/*.{ts,tsx,scss,css} --config .prettierrc.json",
     "test": "vitest",
     "test:ui": "vitest --coverage.enabled=true --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "make-badges": "coverage-badges --output ./badges.svg"
   },
   "dependencies": {
     "@material/material-color-utilities": "^0.3.0",
@@ -70,6 +71,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-istanbul": "^2.1.2",
     "@vitest/ui": "^2.1.2",
+    "coverage-badges-cli": "^2.1.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
