--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "react-material",
+  "name": "@paulobrandaodev/react-material",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/paulobrandao-dev/react-material.git"
+  },
   "files": [
     "dist"
   ],
@@ -65,6 +69,7 @@
     "@eslint/js": "^9.9.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
