--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/paulobrandao-dev/react-material.git"
   },
   "files": [
-    "dist"
+    "dist",
+    "badges.svg"
   ],
   "main": "./dist/react-material.main.umd.cjs",
   "module": "./dist/react-material.main.js",
