chore: Add license and adjust package info

--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "@paulobrandaodev/react-material",
-  "private": true,
+  "name": "react-material",
   "version": "0.1.0",
   "type": "module",
+  "license": "ISC",
+  "homepage": "https://paulobrandao.dev/react-material",
+  "author": {
+    "name": "Paulo Brandão",
+    "url": "https://paulobrandao.dev"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/paulobrandao-dev/react-material.git"
