chore: Update package info

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "type": "module",
   "license": "ISC",
-  "homepage": "https://paulobrandao.dev/react-material",
+  "homepage": "https://github.com/paulobrandao-dev/react-material",
   "author": {
     "name": "Paulo Brandão",
     "url": "https://paulobrandao.dev",
