--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-material",
+  "name": "@paulobrandao/react-material",
   "version": "0.1.0",
   "type": "module",
   "license": "ISC",
